<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Self Destruction</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="signup">Sign UP!</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="email">E-mail</string>
    <string name="signup_button">Sign UP</string>
    <string name="signup_error_title">Ooops...</string>
    <string name="signup_error_message">Please make sure you enter a login, password and email.</string>
    <string name="login_error_title">Ooops...</string>
    <string name="login_error_message">Please make sure you enter a login and password.</string>
    <string name="action_logout">Logout</string>
    <string name="login_dialog_message">Wait for login...</string>
    <string name="signup_dialog_message">Waint for signup.</string>
    <string name="empty_fragment_friends">No have friends yet.</string>
    <string name="empty_fragment_inbox">No have messages.</string>
    <string name="action_edit_friends">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="error_title">We\'re sorry!</string>
    <string name="title_loading_user">Get users</string>
    <string name="loading">Loading...</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="hometown">Hometown</string>
    <string name="web_site">Your web site here</string>
    <string name="action_camera_label">Camera</string>
    <string name="none_external_storage">There was a problem accessing your device\'s external storage.</string>
    <string name="general_error">Sorry there was an error</string>
    <string name="select_video">The selected video must be less than 10 MB</string>
    <string name="select_file_error">There was a problem with the select the file</string>
    <string name="error_file_size_too_large">The selected file is too large! Select a new file</string>

    <string-array name="camera_choose">
        <item>Take Photo</item>
        <item>Take Video</item>
        <item>Choose Photo</item>
        <item>Choose Video</item>
    </string-array>
    <string name="title_activity_choose_recipients">Choose some friends</string>
    <string name="empty_fragment_recipients">Choose some friends first</string>
    <string name="action_send">Send</string>
    <string name="error_to_send_file">There was an error with the file selected. Please selected another.</string>
    <string name="error_select_file_title">\"We\'re sorry\"</string>
    <string name="success_message">Message sent!</string>
    <string name="error_sending_message">There was an error sending your message. Please try again.</string>
    <string name="title_activity_view_image">Photo</string>

    <plurals name="minute">
        <item quantity="one">minute</item>
        <item quantity="other">minutes</item>
    </plurals>

    <plurals name="hour">
        <item quantity="one">hour</item>
        <item quantity="other">hours</item>
    </plurals>

    <plurals name="day">
        <item quantity="one">day</item>
        <item quantity="other">days</item>
    </plurals>

    <plurals name="week">
        <item quantity="one">week</item>
        <item quantity="other">weeks</item>
    </plurals>

    <plurals name="month">
        <item quantity="one">month</item>
        <item quantity="other">months</item>
    </plurals>

</resources>
