<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="br.com.luizgadao.selfdestruction.SignUpActivity.SignUpFragment"
                android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_login"
        android:hint="@string/login"
        android:fontFamily="sans-serif-light"
        android:textSize="14sp">
        <requestFocus/>
    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_first_name"
        android:fontFamily="sans-serif-light"
        android:textSize="14sp"
        android:hint="@string/first_name"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_last_name"
        android:fontFamily="sans-serif-light"
        android:textSize="14sp"
        android:hint="@string/last_name"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_hometown"
        android:fontFamily="sans-serif-light"
        android:textSize="14sp"
        android:hint="@string/hometown"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_web"
        android:fontFamily="sans-serif-light"
        android:textSize="14sp"
        android:hint="@string/web_site"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/et_password"
        android:hint="@string/password"
        android:fontFamily="sans-serif-light"
        android:textSize="14sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:id="@+id/et_email"
        android:fontFamily="sans-serif-light"
        android:textSize="14sp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/signup_button"
        android:id="@+id/bt_signup"/>

</LinearLayout>
